--- a/studio-ghibli/package.json
+++ b/studio-ghibli/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.4.3",
+    "@material-ui/icons": "^4.4.3",
     "axios": "^0.19.0",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
