--- a/studio-ghibli/package.json
+++ b/studio-ghibli/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.4.3",
     "@material-ui/icons": "^4.4.3",
     "axios": "^0.19.0",
+    "images-scraper": "^2.0.12",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
