--- a/studio-ghibli/package.json
+++ b/studio-ghibli/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^4.4.3",
     "axios": "^0.19.0",
     "images-scraper": "^2.0.12",
+    "material-ui-image": "^3.2.1",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
